--- a/src/template.html
+++ b/src/template.html
@@ -2,8 +2,13 @@
 <html lang="en">
   <head>
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
   	<canvas></canvas>
   </body>
+  <div class="controls">
+  	<div id="left">↶</div>
+  	<div id="right">↷</div>
+  </div>
 </html>
