--- a/src/template.html
+++ b/src/template.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
   </head>
   <body>
-  	<canvas></canvas>
+    <div class="screenBorder">
+      <canvas />
+    </div>
+    <div class="controls">
+      <button id="left">&#8634;</button>
+      <button id="right">&#8635;</button>
+    </div>
   </body>
-  <div class="controls">
-  	<div id="left">↶</div>
-  	<div id="right">↷</div>
-  </div>
 </html>
