added amazon ad banner

--- a/src/template.html
+++ b/src/template.html
@@ -13,4 +13,13 @@
       <button id="right">&#8635;</button>
     </div>
   </body>
+  <footer>
+    <a target="_blank"  href="https://www.amazon.co.uk/gp/product/B076SRNWHY/ref=as_li_tl?ie=UTF8&camp=1634&creative=6738&creativeASIN=B076SRNWHY&linkCode=as2&tag=twsau08-21&linkId=c5ceedf8a1b5b38f29f3febdf79079f7"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=GB&ASIN=B076SRNWHY&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL110_&tag=twsau08-21" ></a>
+    <a target="_blank"  href="https://www.amazon.co.uk/gp/product/B085CJHSHJ/ref=as_li_tl?ie=UTF8&camp=1634&creative=6738&creativeASIN=B085CJHSHJ&linkCode=as2&tag=twsau08-21&linkId=da9475d29ac9d1f9de49633f1228dbc6"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=GB&ASIN=B085CJHSHJ&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL110_&tag=twsau08-21" ></a>
+    <a target="_blank"  href="https://www.amazon.co.uk/gp/product/B0948T9QTH/ref=as_li_tl?ie=UTF8&camp=1634&creative=6738&creativeASIN=B0948T9QTH&linkCode=as2&tag=twsau08-21&linkId=b6417e428ebd9fd2e0e50efc37ec196a"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=GB&ASIN=B0948T9QTH&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL110_&tag=twsau08-21" ></a>
+    <iframe src="https://rcm-eu.amazon-adsystem.com/e/cm?o=2&p=20&l=ez&f=ifr&linkID=019e485c3ff7c74e98dc0a54e182b98b&t=twsau08-21&tracking_id=twsau08-21" width="120" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
+    <a target="_blank"  href="https://www.amazon.co.uk/gp/product/B07ZPVTBDX/ref=as_li_tl?ie=UTF8&camp=1634&creative=6738&creativeASIN=B07ZPVTBDX&linkCode=as2&tag=twsau08-21&linkId=11185dd4708246413d66938986b27b68"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=GB&ASIN=B07ZPVTBDX&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL110_&tag=twsau08-21" ></a>
+    <a target="_blank"  href="https://www.amazon.co.uk/gp/product/B00GHK2YME/ref=as_li_tl?ie=UTF8&camp=1634&creative=6738&creativeASIN=B00GHK2YME&linkCode=as2&tag=twsau08-21&linkId=6b6f367f956f6ef8ea713f105cf63514"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=GB&ASIN=B00GHK2YME&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL110_&tag=twsau08-21" ></a>
+    <a target="_blank"  href="https://www.amazon.co.uk/gp/product/B07R1992B2/ref=as_li_tl?ie=UTF8&camp=1634&creative=6738&creativeASIN=B07R1992B2&linkCode=as2&tag=twsau08-21&linkId=2408754a3fa48a2feedbffbf8bdca0c2"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=GB&ASIN=B07R1992B2&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL110_&tag=twsau08-21" ></a>
+  </footer>
 </html>
